# EFREIRoids

./: CMakeLists.txt  README.adoc
SDL_SETUP/: unix.adoc  windows.adoc
